--- a/app/src/main/res/layout/list_item_tambah_data.xml
+++ b/app/src/main/res/layout/list_item_tambah_data.xml
@@ -11,9 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/grey"
-        >
-
+        android:background="@color/grey">
 
         <TextView
             android:id="@+id/label_kode"
@@ -105,8 +103,10 @@
 
         <TextView
             android:id="@+id/tv_add_nama_penyakit"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
+            android:textSize="11sp"
+            android:maxLines="2"
             android:text="@string/malaria_mix"
             android:textStyle="bold"
             android:fontFamily="sans-serif-light"
@@ -122,7 +122,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="@string/jumlah_penderita"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintStart_toStartOf="@+id/tv_label_nama_penyakit"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_nama_penyakit" />
 
