--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#F2F2F2</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="red">#F44336</color>
+
 </resources>
