--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/teal_200"
         android:text="@string/skdr"
         android:textSize="45sp"
         android:textStyle="bold"
@@ -24,6 +25,7 @@
         android:id="@+id/title_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/teal_200"
         android:text="@string/title_desc"
         android:layout_marginTop="20dp"
         android:textSize="20sp"
