--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/label_minggu"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -110,7 +111,7 @@
             android:layout_height="wrap_content"
             android:text="Data Terbaru"
             android:textSize="18sp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/roboto_regular"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:layout_gravity="center_horizontal"
