--- a/app/src/main/res/layout/fragment_recapitulation.xml
+++ b/app/src/main/res/layout/fragment_recapitulation.xml
@@ -58,7 +58,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="280dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/materialCardView"
@@ -119,24 +120,22 @@
                 android:id="@+id/btn_sms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="72dp"
-                android:layout_marginTop="32dp"
                 android:text="SMS"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_format_laporan"
-                app:layout_constraintVertical_bias="0.08" />
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="@+id/btn_wa"
+                app:layout_constraintStart_toStartOf="@+id/btn_wa"
+                app:layout_constraintTop_toBottomOf="@+id/btn_wa" />
 
             <Button
                 android:id="@+id/btn_wa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="WhatsApp"
-
-                app:layout_constraintBottom_toBottomOf="@+id/btn_sms"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_sms"
-                app:layout_constraintTop_toTopOf="@+id/btn_sms" />
+                android:layout_marginTop="24dp"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="@+id/tv_format_laporan"
+                app:layout_constraintStart_toStartOf="@+id/tv_format_laporan"
+                app:layout_constraintTop_toBottomOf="@+id/tv_format_laporan" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
