--- a/app/src/main/res/layout/list_item_tambah_data.xml
+++ b/app/src/main/res/layout/list_item_tambah_data.xml
@@ -20,25 +20,25 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="28dp"
             android:background="@drawable/shape_layout_corners_with_color"
-            android:padding="3dp"
+            android:padding="4dp"
             android:text="@string/kode"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_label_periode_minggu"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_list_add_nama_desa"
             app:layout_constraintEnd_toStartOf="@+id/tv_label_periode_minggu"
-            app:layout_constraintTop_toTopOf="@+id/tv_label_periode_minggu" />
+            app:layout_constraintTop_toTopOf="@+id/tv_list_add_nama_desa" />
 
         <TextView
             android:id="@+id/tv_label_periode_minggu"
             android:layout_width="wrap_content"
-            android:textColor="@color/white"
-            android:padding="3dp"
-            android:background="@drawable/shape_layout_corners_with_color"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:background="@drawable/shape_layout_corners_with_color"
+            android:padding="3dp"
             android:text="@string/periode_minggu"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/label_kode"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/tv_list_add_nama_desa" />
 
         <TextView
             android:id="@+id/tv_kode"
@@ -67,79 +67,44 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_label_periode_minggu" />
 
         <TextView
-            android:id="@+id/tv_add_label_desa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nama_desa"
-            android:layout_marginStart="4dp"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
             android:id="@+id/tv_list_add_nama_desa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/roboto"
+            android:textColor="@color/black"
             android:textStyle="bold"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_add_label_desa"
-            app:layout_constraintStart_toEndOf="@+id/tv_add_label_desa"
-            app:layout_constraintTop_toTopOf="@+id/tv_add_label_desa"
-            app:layout_constraintVertical_bias="0.0"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="NATAR" />
-
-        <TextView
-            android:id="@+id/tv_label_nama_penyakit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nama_penyakit"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@+id/tv_add_label_desa"
-            app:layout_constraintTop_toBottomOf="@+id/tv_add_label_desa" />
 
 
         <TextView
             android:id="@+id/tv_add_nama_penyakit"
-            android:layout_width="90dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:textSize="11sp"
-            android:maxLines="2"
+            android:fontFamily="@font/roboto"
+            android:maxLines="4"
+            android:layout_marginTop="8dp"
             android:text="@string/malaria_mix"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_label_nama_penyakit"
             app:layout_constraintStart_toStartOf="@+id/tv_list_add_nama_desa"
-            app:layout_constraintTop_toTopOf="@+id/tv_label_nama_penyakit" />
-
-
-        <TextView
-            android:id="@+id/tv_label_jumlah_penderita"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="@string/jumlah_penderita"
-            android:layout_marginTop="28dp"
-            app:layout_constraintStart_toStartOf="@+id/tv_label_nama_penyakit"
-            app:layout_constraintTop_toBottomOf="@+id/tv_label_nama_penyakit" />
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_list_add_nama_desa" />
 
         <TextView
             android:id="@+id/tv_jumlah_penderita"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="12 Orang"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/roboto"
+            android:text="@string/tools_jumlah"
+            android:layout_marginTop="8dp"
             android:textColor="@color/black"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_label_jumlah_penderita"
-            app:layout_constraintStart_toEndOf="@+id/tv_label_jumlah_penderita"
-            app:layout_constraintTop_toTopOf="@+id/tv_label_jumlah_penderita" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/tv_add_nama_penyakit"
+            app:layout_constraintTop_toBottomOf="@+id/tv_add_nama_penyakit" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
