--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,10 @@
             android:id="@+id/linearLayout2"
             android:layout_marginTop="8dp"
             android:background="@color/grey"
-            android:layout_width="300dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:padding="4dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
                 android:backgroundTint="@color/black"
                 android:gravity="center_horizontal"
                 android:padding="8dp"
@@ -52,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/old_green"
                 android:text="Cari"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_cari"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="36dp"
             android:layout_marginBottom="80dp"
+            android:backgroundTint="@color/old_green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/ic_baseline_playlist_add_24"
